# platform.core.api.app-manager

./: CMakeLists.txt  capi-appfw-app-manager.manifest  capi-appfw-app-manager.pc.in
debian/: changelog  control  rules
doc/: appfw_app_manager_doc.h
include/: app_context.h  app_event.h  app_info.h  app_info_internal.h  app_manager.h  app_manager_deprecated.h  app_manager_event.h  app_manager_extension.h  app_manager_internal.h  app_manager_private.h
packaging/: capi-appfw-app-manager.spec
src/: app_context.c  app_event.c  app_info.c  app_manager.c  app_manager_deprecated.c  app_manager_event.c  app_manager_internal.h
tool/: CMakeLists.txt  main.c
