CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_INSTALL_PREFIX /usr)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(APP_MANAGER "capi-appfw-app-manager")
PROJECT(${APP_MANAGER})
SET(SOURCES src/app_context.c
	src/app_info.c
	src/app_manager.c)

INCLUDE(FindPkgConfig)
pkg_check_modules(PKGS REQUIRED
	capi-base-common
	dlog
	vconf
	aul
	pkgmgr
	pkgmgr-info
	glib-2.0)
FOREACH(FLAGS ${PKGS_CFLAGS})
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
ENDFOREACH(FLAGS)

SET(INC_DIR include)
INCLUDE_DIRECTORIES(${INC_DIR})

ADD_LIBRARY(${APP_MANAGER} SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(${APP_MANAGER} ${PKGS_LDFLAGS})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Wall -Werror -fvisibility=hidden")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")

SET_TARGET_PROPERTIES(${APP_MANAGER} PROPERTIES VERSION ${FULLVER})
SET_TARGET_PROPERTIES(${APP_MANAGER} PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(${APP_MANAGER} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET(PC_NAME ${APP_MANAGER})
SET(PC_REQUIRED "capi-base-common")
SET(PC_LDFLAGS -l${APP_MANAGER})
SET(PC_CFLAGS -I\${PREFIX}/include/appfw)
CONFIGURE_FILE(capi-appfw-app-manager.pc.in ${CMAKE_CURRENT_SOURCE_DIR}/${APP_MANAGER}.pc @ONLY)

INSTALL(TARGETS ${APP_MANAGER} DESTINATION ${LIB_INSTALL_DIR})
INSTALL(DIRECTORY ${INC_DIR}/ DESTINATION include/appfw)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${APP_MANAGER}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

ADD_SUBDIRECTORY(tool)
