CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(capi-appfw-app-manager C)
SET(SOURCES src/app_context.c
	src/app_info.c
	src/app_manager.c)

INCLUDE(FindPkgConfig)
pkg_check_modules(PKGS REQUIRED
	capi-base-common
	dlog
	vconf
	aul
	pkgmgr
	pkgmgr-info
	glib-2.0
	cynara-client)
FOREACH(FLAGS ${PKGS_CFLAGS})
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
ENDFOREACH(FLAGS)

SET(INC_DIR include)
INCLUDE_DIRECTORIES(${INC_DIR})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PKGS_LDFLAGS})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Wall -Werror -fvisibility=hidden")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${FULLVER})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET(PC_PREFIX ${CMAKE_INSTALL_PREFIX})
CONFIGURE_FILE(capi-appfw-app-manager.pc.in ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc @ONLY)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR})
INSTALL(DIRECTORY ${INC_DIR}/ DESTINATION include/appfw)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

ADD_SUBDIRECTORY(tool)
